welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:65: error: Unmatched closing brace '}' ignored here
}
^